# ImageMan

./: CMakeLists.txt  ImageMan.cpp  README.md
include/ImageMan/: ImageMan.hpp
src/: ImageMan.cpp
